examples/test/testpolicy10270.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10270
  namespace: namespace395
spec:
  podSelector:
    matchLabels:
      key32: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value34
          key49: value23
          key48: value41
      podSelector:
        matchLabels:
          key1: value8
          key38: value30
